--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
+    "css-loader": "^4.3.0",
+    "file-loader": "^6.1.0",
+    "style-loader": "^1.2.1",
     "webpack-dev-server": "^3.11.0"
   }
 }
