--- a/package.json
+++ b/package.json
@@ -8,20 +8,21 @@
     "webpack:dev-server": "webpack-dev-server --mode development"
   },
   "dependencies": {
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "babel-loader": "^8.1.0",
+    "axios": "^0.20.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "css-loader": "^4.3.0",
     "file-loader": "^6.1.0",
     "style-loader": "^1.2.1",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "babel-loader": "^8.1.0",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   }
 }
